Add google adsense

--- a/src/index.template.html
+++ b/src/index.template.html
@@ -37,6 +37,7 @@
       href="icons/favicon-16x16.png"
     />
     <link rel="icon" type="image/ico" href="favicon.ico" />
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5504503922827317" crossorigin="anonymous"></script>
   </head>
   <body>
     <!-- DO NOT touch the following DIV -->
