--- a/src/index.template.html
+++ b/src/index.template.html
@@ -3,7 +3,8 @@
   <head>
 
     <title><%= productName %></title>
-
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5504503922827317"
+  crossorigin="anonymous"></script>
     <meta charset="utf-8" />
     <meta name="description" content="<%= productDescription %>" />
     <meta name="format-detection" content="telephone=no" />
