Replace adsense with media.net

--- a/src/index.template.html
+++ b/src/index.template.html
@@ -3,9 +3,12 @@
   <head>
 
     <title><%= productName %></title>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5504503922827317"
-  crossorigin="anonymous"></script>
-    <meta charset="utf-8" />
+    <script type="text/javascript">
+      window._mNHandle = window._mNHandle || {};
+      window._mNHandle.queue = window._mNHandle.queue || [];
+      medianet_versionId = "3121199";
+    </script>
+    <script src="https://contextual.media.net/dmedianet.js?cid=8CU147RS2" async="async"></script>    <meta charset="utf-8" />
     <meta name="description" content="<%= productDescription %>" />
     <meta name="format-detection" content="telephone=no" />
     <meta name="msapplication-tap-highlight" content="no" />
